<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nota"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""

        android:ems="10"
        android:hint="@string/digite_nota_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/nota2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <EditText
        android:id="@+id/nota2"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_nota_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/nota3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nota4"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_nota_4"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/faltas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nota3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_nota_3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/nota4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="231dp"
        android:layout_height="49dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="255dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/colorPrimaryDark"
        android:backgroundTintMode="multiply"
        android:text="@string/calculcar"
        android:textColor="@android:color/background_light"
        android:shadowColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faltas"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="205dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@android:color/background_light"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/resultado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcular"
        app:layout_constraintVertical_bias="0.57"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/faltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero_de_faltas"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/nota4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>